Fix widgets list layout on small screens
# Conflicts:
#	inc/widgets/views/_widget_list.view.php
#	rsc/js/build/bootstrap-evo_backoffice.bmin.js
#	rsc/js/build/evo_backoffice.bmin.js
#	skins_adm/bootstrap/rsc/css/style.min.css

--- a/skins/touch/style.css
+++ b/skins/touch/style.css
@@ -146,7 +146,8 @@ h2 {
 
 .wptouch-videos {
 	-ms-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	-webkit-transform: translate3d(0,0,0);
+	        transform: translate3d(0,0,0);
 }
 
 /* @end */
@@ -479,14 +480,16 @@ a.post-arrow {
 	cursor: default;
 	border-radius: 5px;
 	-ms-transform: scale(1.0) rotate(0deg);
-	transform: scale(1.0) rotate(0deg);
+	-webkit-transform: scale(1.0) rotate(0deg);
+	        transform: scale(1.0) rotate(0deg);
 	transition-duration: 0.3s;
 	-webkit-touch-callout: none;
 }
 
 a.post-arrow-down {
 	-ms-transform: scale(1.0) rotate(90deg);
-	transform: scale(1.0) rotate(90deg);
+	-webkit-transform: scale(1.0) rotate(90deg);
+	        transform: scale(1.0) rotate(90deg);
 	transition-duration: 0.3s;
 }
 
@@ -930,7 +933,8 @@ h3#com-head img#com-arrow {
 	position: relative;
 	top: 1px;
 	-ms-transform: scale(1.0) rotate(0deg);
-	transform: scale(1.0) rotate(0deg);
+	-webkit-transform: scale(1.0) rotate(0deg);
+	        transform: scale(1.0) rotate(0deg);
 	transition-duration: 0.6s;
 }
 
@@ -943,7 +947,8 @@ h3#com-head img#com-arrow {
 
 .com-arrow-down {
 	-ms-transform: scale(1.0) rotate(90deg) !important;
-	transform: scale(1.0) rotate(90deg) !important;
+	-webkit-transform: scale(1.0) rotate(90deg) !important;
+	        transform: scale(1.0) rotate(90deg) !important;
 	transition-duration: 0.6s !important;
 }
 
